--- a/skin.estuary.modv2/language/resource.language.en_gb/strings.po
+++ b/skin.estuary.modv2/language/resource.language.en_gb/strings.po
@@ -1590,3 +1590,8 @@ msgstr ""
 msgctxt "#40175"
 msgid "Pictures sources"
 msgstr ""
+
+#: /xml/SkinSettings.xml
+msgctxt "#40176"
+msgid "Show colored outline"
+msgstr ""
