• Add possibility to disable animated lyrics for classic lyrics

--- a/skin.estuary.modv2/changelog.txt
+++ b/skin.estuary.modv2/changelog.txt
@@ -1,5 +1,6 @@
 [B]2.2.7[/B]
 • Add possibility to disable colored outline for CDArts
+• Add possibility to disable animated lyrics for classic lyrics
 • Fix disc overlay for some CDArts
 • Fix extended info window for some resolutions
 • Fix playlists editor
