--- a/skin.estuary.modv2/changelog.txt
+++ b/skin.estuary.modv2/changelog.txt
@@ -1,3 +1,6 @@
+[B]2.2.10[/B]
+• Minor fixes
+
 [B]2.2.9[/B]
 • Add support for extendedinfo youtube list
 • Add shortcut for movies set info to context menu
